--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
 
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="reset.css" />
+
+    <!-- Fonts Google -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"/>
+
+    <!-- Main CSS -->
 
     <title>My Team Page</title>
 
@@ -18,7 +24,20 @@
 
   <body>
     
-    
+    <header>
+
+      <h1>The creative crew</h1>
+
+      <h2>WHO WE ARE</h2>
+      <p>
+        We are a team of creatively diverse. Driven.
+        Innovate individuals working in various
+        locations from the world.
+      </p>
+
+    </header>
+
+
 
   </body>
 </html>
